tests/compile-fail/integration__integration__type_check__ins_arg_binop_str__stackless.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: runtime temporary of non-numeric type
   ┌─ <input>:11:31
   │
11 │         spellcard_start(0, 0, I0 ? "abc" : "def");
   │                               ^^^^^^^^^^^^^^^^^^ temporary strings cannot be created


